# veza-full-stack

./: .gitignore  AUDIT_FINAL_RESULTS.md  AUDIT_INITIAL.md  CLEANUP_REPORT_20250628_161540.md  DEPLOIEMENT.md  DEPLOIEMENT_CORRIGE.md  DEPLOIEMENT_FINAL.md  GUIDE_DEVELOPMENT_MANUAL.md  GUIDE_TEST.md  GUIDE_TESTS_COMPLETS.md  GUIDE_UTILISATION_NAVIGATEUR.md  IMPLEMENTATION_GUIDELINES.md  MASTER_PLAN_PRODUCTION.md  Makefile  PHASE_1A_DOCUMENTATION_FRONTEND_BASIQUE.md  PHASE_2A_INVENTAIRE_COMPLET_FRONTEND_BASIQUE.md  PHASE_2A_MIGRATION_PLAN.md  PHASE_2A_RAPPORT_ETAPES_1-2.md  PHASE_2A_RAPPORT_ETAPE_3_AUTHENTIFICATION.md  PHASE_2A_RAPPORT_ETAPE_3_AUTHENTIFICATION_COMPLETE.md  PHASE_2_BIS_FINAL_STATUS.md  PROJECT_CLEAN_STATUS.md  QUICK_START.md  RAPPORT_FINAL_PRODUCTION_READINESS.md  RAPPORT_TESTS_FINAL.md  README-VEZA-MANAGER.md  README.md  README_ARCH.md  RESOLUTION_PROBLEMES_TESTS.md  ROADMAP_DETAILED.md  TALAS_INTEGRATION_REPORT.md  TEST-RAPIDE.md  TEST_STATUS_FINAL.md  TYPE_ALIGNMENT_REPORT.md  console-export-2025-6-28_11-19-9cccccccccc.txt  create_test_user.sql  database_migration_chat_compatibility.sql  docker-compose.test.yml  fix_backend_critical.sh  fix_zero_warnings_absolute.sh  (+11 more)
veza-chat-server/: Cargo.toml  Makefile  README.md  README_NETTOYAGE.md  build.rs  deploy-simple.sh  docker-compose.yml  env.example  fix_compilation_errors.py  fix_errors.sh
veza-chat-server/.sqlx/: query-fa1e69d25ad45f72b5d3d3a3d4a5c5b7f5e1f2e3d4c5b6a7e8f9.json
veza-chat-server/archives/: GUIDE_DM_ENRICHIS.md  GUIDE_MIGRATION.md  GUIDE_SALONS_ENRICHIS.md  PARITE_COMPLETE_DM_SALONS.md  README.md  SALONS_ENRICHIS_RESUME.md  SECURITY_AUDIT_REPORT.md  cursor_dump.sql  cursor_dump_before_002_and_003_db-updates.sql  doc_chat_server.md  fix_errors.sh  fix_errors2.sh
veza-chat-server/docs/: README.md  architecture.md  data_models.md  deployment.md  integration_go.md  integration_react.md  rest_api.md  security.md  troubleshooting.md  websocket_api.md
veza-chat-server/examples/: advanced_features_demo.rs
veza-chat-server/migrations/: 001_create_clean_database.sql  002_advanced_features.sql  1000_dm_enriched.sql  999_cleanup_production_ready_fixed.sql  post_migration_fixes.sql
veza-chat-server/migrations/archive/: 003_enhanced_schema.sql  003_enhanced_schema_fixed.sql  003_enhanced_schema_simple.sql  004_corrective_fix.sql  004_corrective_migration.sql  999_cleanup_production_ready.sql
veza-chat-server/proto/chat/: chat.proto
veza-chat-server/scripts/: README.md  deploy.sh  validate_phase4.sh
veza-chat-server/scripts/database/: README.md  run_dm_migration.sh  run_migration.sh  run_post_migration_fixes.sh  verify_migration.sh
veza-chat-server/scripts/maintenance/: reset_db.sh
veza-chat-server/scripts/testing/: test_dm_enrichis.sh  test_salons_enrichis.sh
veza-chat-server/src/: advanced_moderation.rs  auth.rs  authentication.rs  cache.rs  client.rs  config.rs  connection_pool.rs  error.rs  grpc_server.rs  lib.rs  main.rs  message_handler.rs  message_store.rs  message_store_simple.rs  messages.rs  models.rs  moderation.rs  monitoring.rs  optimized_persistence.rs  permissions.rs  presence.rs  rate_limiter.rs  security.rs  services.rs  simple_message_store.rs  test_simple_store.rs  utils.rs  validation.rs  websocket.rs
veza-chat-server/src/core/: advanced_rate_limiter.rs  channels.rs  connection.rs  encryption.rs  message.rs  mod.rs  moderation_integration.rs  rich_messages.rs  room.rs  user.rs
veza-chat-server/src/hub/: audit.rs  channel_websocket.rs  channels.rs  common.rs  direct_messages.rs  direct_messages_websocket.rs  mod.rs  reactions.rs  room_enhanced.rs
veza-stream-server/: .gitignore  COMPLETION_JOURS19-20.md  Cargo.toml  Dockerfile  Dockerfile.production  Makefile  PHASE_2_BIS_COMPLETION_REPORT.md  RAPPORT_FINAL_STREAM_SERVER.md  README.md  build.rs  docker-compose.production.yml  docker-compose.yml  env.example  fix_zero_warnings_absolute.sh  install.sh  nettoyage_ultra_conservateur.sh
veza-stream-server/.github/workflows/: production-deploy.yml
veza-stream-server/dashboards/: system-overview.json
veza-stream-server/docs/: PRODUCTION_GUIDE.md  README.md
veza-stream-server/docs/modules/: analytics.md  audio.md  auth.md  config.md  health.md  notifications.md  streaming.md
veza-stream-server/docs/production/: PRODUCTION_GUIDE.md
veza-stream-server/k8s/production/: configmap.yaml  secrets.yaml  stream-server-deployment.yaml
veza-stream-server/proto/common/: auth.proto
veza-stream-server/scripts/: deploy_production.sh  generate_grafana_dashboards.sh  health_check_production.sh  test_jour14.sh  test_jours15-16.sh  test_jours17-18.sh  test_jours19-20.sh  validate_phase2_bis_completion.sh  validate_phase5.sh
veza-stream-server/src/: error.rs  grpc_server.rs  lib.rs  main.rs  routes.rs  simple_stream_server.rs
veza-stream-server/src/analytics/: mod.rs
veza-stream-server/src/audio/: compression.rs  effects.rs  mod.rs  processing.rs  realtime.rs
veza-stream-server/src/auth/: mod.rs
veza-stream-server/src/cache/: mod.rs
veza-stream-server/src/codecs/: aac.rs  flac.rs  mod.rs  mp3.rs  opus.rs
veza-stream-server/src/config/: mod.rs
veza-stream-server/src/core/: buffer.rs  encoder.rs  mod.rs  stream.rs  sync.rs
veza-stream-server/src/eventbus/: mod.rs
veza-stream-server/src/grpc/: auth_service.rs  events_service.rs  mod.rs  stream_service.rs
veza-stream-server/src/health/: mod.rs
veza-stream-server/src/middleware/: logging.rs  mod.rs  rate_limit.rs  security.rs
veza-stream-server/src/monitoring/: alerting.rs  grafana_dashboards.rs  health_checks.rs  mod.rs  prometheus_metrics.rs  tracing.rs
veza-stream-server/src/notifications/: mod.rs
veza-stream-server/src/soundcloud/: creator.rs  discovery.rs  management.rs  mod.rs  playback.rs  social.rs  upload.rs  waveform.rs
veza-stream-server/src/streaming/: adaptive.rs  advanced_streaming.rs  live_recording.rs  mod.rs  sync_manager.rs  webrtc.rs  websocket.rs
veza-stream-server/src/testing/: benchmarks.rs  load_testing.rs  (+3 more)
veza-stream-server/tools/: Cargo.toml  transcoder.rs  waveform_generator.rs
(+628 files in other folders)
