[package]
name = "stream_server_tools"
version = "0.2.0"
edition = "2021"
authors = ["Stream Server Team <team@streamserver.com>"]
description = "Audio processing tools for Stream Server"
license = "MIT"

[[bin]]
name = "waveform_generator"
path = "waveform_generator.rs"

[[bin]]
name = "transcoder"
path = "transcoder.rs"

[dependencies]
# Command line parsing
clap = { version = "4.4", features = ["derive"] }

# Audio processing
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
minimp3 = "0.5"
rubato = "0.15"

# FFT and signal processing
rustfft = "6.2"
apodize = "1.0"

# Async utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# System information
sysinfo = "0.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true 